--- a/style.css
+++ b/style.css
@@ -248,9 +248,7 @@ nav a:hover {
     width: 3px;
 }
 
-.cseparator {
-    
-}
+
 
 .separator {
     display: flex;
@@ -504,6 +502,7 @@ nav a:hover {
 }
 
 .portfolio h2 {
+    text-align: center;
     font-size: 43px;
     margin-bottom: 30px;
 }
