--- a/style.css
+++ b/style.css
@@ -590,7 +590,7 @@ nav a:hover {
 
 @keyframes words {
     0%, 20% {
-        content: 'Recuiters';
+        content: 'Recruiters';
     }
     21%, 40% {
         content: 'Employers';
