--- a/style.css
+++ b/style.css
@@ -242,6 +242,10 @@ nav a:hover {
     font-size: 25px;
 }
 
+.stats-details h2 a {
+    color: #fff;
+}
+
 .divider {
     background: -webkit-linear-gradient(75deg,hsl(30,80%,75%), hsl(29, 78%, 79%), hsl(29,28%,46%), hsl(29, 56%, 28%),hsl(29,28%,46%), hsl(29, 78%, 79%), hsl(30,80%,75%));
     height: 100%;
